--- a/main/templates/declaration.html
+++ b/main/templates/declaration.html
@@ -34,6 +34,7 @@ input {
 						<div style="clear:both;"></div>
 							<div style="color:black;" class="col-md-12 form-group">
 								<label>I hereby declare that the information furnished in this application form is true to the best of my knowledge and belief.</label>
+								<p>Please upload your signature below.</p>
 	                            {% render_field form.signature class="form-control required" %}
 	                        </div>
 	                        <div class="form-wizard-buttons">
