--- a/main/templates/research.html
+++ b/main/templates/research.html
@@ -64,11 +64,11 @@ input {
                         	{% render_field form.area_reasearch class="form-control required" %}
                         </div>
                          <div class="col-md-12 form-group">
-            			    <label>From Date: <span>*</span></label>
+            			    <label>From Date (YY/MM/DD): <span>*</span></label>
                             {% render_field form.from_date class="form-control required" %}
                         </div>
                          <div class="col-md-12 form-group">
-            			    <label>To Date: <span>*</span></label>
+            			    <label>To Date (YY/MM/DD): <span>*</span></label>
                             {% render_field form.to_date class="form-control required" %}
                         </div>
                         <div class="col-md-12 form-group">
