--- a/main/templates/declaration.html
+++ b/main/templates/declaration.html
@@ -24,7 +24,7 @@ input {
 			
 			<center><img height="80" width="80" src="https://bmsit.ac.in/assets/logo-5527329e306f832982eb5b10b8325a606bc2058ae61b4aa5705c8c2d4e436212.png"></center><br>	<!-- Form Wizard -->
 
-            		<h3>BMS Institute of Technology</h3>	
+            		<h3>BMS Institute of Technology & Management</h3>	
             		<div class="form-wizard-steps form-wizard-tolal-steps-5">
             			<div class="form-wizard-progress">
             			    <div class="form-wizard-progress-line" data-now-value="10" data-number-of-steps="5" style="width: 10%;"></div>
