--- a/main/templates/display.html
+++ b/main/templates/display.html
@@ -230,7 +230,7 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="{% static 'js/main.js' %}"></script>
-
+{% include 'partials/footer.html' %}
 </body>
 
 </html>
