--- a/main/templates/educational.html
+++ b/main/templates/educational.html
@@ -280,4 +280,5 @@ $('#id_date_of_birth').change(function(e) {
     $('#id_age').val(calculateAge($birthday));
 });
 </script>
+{% include 'partials/footer.html' %}
 </body>
