--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -198,7 +198,6 @@ input {
             
     </div>
 </section>
-
 <script type="text/javascript">
 	"use strict";
 function scroll_to_class(element_class, removed_height) {
@@ -393,5 +392,5 @@ $('#id_date_of_birth').change(function(e) {
     $('#id_age').val(calculateAge($birthday));
 });
 </script>
+{% include 'partials/footer.html' %}
 </body>
-
