--- a/main/templates/achievement.html
+++ b/main/templates/achievement.html
@@ -275,4 +275,5 @@ $('#id_date_of_birth').change(function(e) {
     $('#id_age').val(calculateAge($birthday));
 });
 </script>
+{% include 'partials/footer.html' %}
 </body>	
