--- a/main/templates/industrial.html
+++ b/main/templates/industrial.html
@@ -277,4 +277,5 @@ $('#id_date_of_birth').change(function(e) {
 	$('#id_age').val(calculateAge($birthday));
 });
 </script>
+{% include 'partials/footer.html' %}
 </body>	
