--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -95,6 +95,6 @@
       
 </div> <!-- /form -->
 	<script src="{% static 'js/login.js' %}"></script>
-  
+{% include 'partials/footer.html' %}
 </body>
 </html>
