--- a/main/templates/partials/footer.html
+++ b/main/templates/partials/footer.html
@@ -1,3 +1,3 @@
 <footer style="background-color:white;padding:1%;width:100%;" class="bg-dark text-white mt-4 footer">
-    <div style="text-align:center;color:black;" class="col-md-12">Product By <a style="color:black;text-decoration:underline;" href="https://devxlabs.co/">DevX<img style="vertical-align:-15px;" width="50" src="https://bmsit.ac.in/devx.png"></a></div>
+    <div style="text-align:center;color:black;" class="col-md-12">Product By <a style="color:black;text-decoration:underline;" href="https://devxlabs.co/">DevX<img style="vertical-align:-15px;" width="50" src="https://bmsit.ac.in/devx.png"></a><br> For Technical issues contact: <a href="tel:+919916699794">+91 9916699794</a></div>
 </footer>
