--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -11,12 +11,40 @@
 <!--===============================================================================================-->
 <style type="text/css">
   body {
-    background-color: #a91a32;
+    background-color: #a91a32;min-height: 100%;
+    color: #FFF;
   }
+  html {
+  height: 100%;
+}
+footer {
+    background-color: orange;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+}
+.closed{
+    height: 100px;
+
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+}
 </style>
 </head>
 <body>
-  <div class="form">
+  <h2 style="text-align:center;color: #c1bdba">BMS institute of Technology and Management Career Portal</h2> 
+  <div class="closed">
+  <h3 style="text-align:center;">Thanks for the overwhelming response. Applications are now closed.</h3>
+</div>
+   <!-- <div class="form">
       
       <ul class="tab-group">
         <li class="tab active"><a href="#signup">Sign Up</a></li>
@@ -91,9 +119,8 @@
 
         </div>
         
-      </div><!-- tab-content -->
-      
-</div> <!-- /form -->
+      </div>
+</div>  -->
 	<script src="{% static 'js/login.js' %}"></script>
 {% include 'partials/footer.html' %}
 </body>
